Base64编码改为使用java的API